syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.stanford.futuredata.uniserve";
option java_outer_classname = "BrokerCoordinatorProto";

package brokercoordinator;

// Communication from datastores to the coordinator.
service BrokerCoordinator {
    rpc QueryStatistics (QueryStatisticsMessage) returns (QueryStatisticsResponse) {}
    rpc TableInfo (TableInfoMessage) returns (TableInfoResponse) {}
    rpc CreateTable (CreateTableMessage) returns (CreateTableResponse) {}
}

message QueryStatisticsMessage {
    bytes queryStatistics = 1;
}

message QueryStatisticsResponse {}

message TableInfoMessage {
    string tableName = 1;
}

message TableInfoResponse {
    int32 returnCode = 1;
    int32 id = 2;
    int32 numShards = 3;
}

message CreateTableMessage {
    string tableName = 1;
    int32 numShards = 2;
}

message CreateTableResponse {
    int32 returnCode = 1;
}